@@ -1,3 +1,11 @@
+2014-10-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	bug #37441: lockbits in ATxmega + avrdude = problem
+	* fileio.c: replace strmcp(..., "lock") by strncmp(..., "lock", 4)
+	where applicable
+	* jtag3.c: (Dito.)
+	* jtagmkII.c: (Dito.)
+
 2014-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #42267: jtag3isp fails to read lock and fuse bytes directly
